--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,12 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: macos-latest
+
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest]
+
     steps:
       - name: 📂 Checkout code
         uses: actions/checkout@v4
